--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "@mui/x-data-grid": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "material-table": "^1.36.0",
+    "react-admin": "^3.19.11",
     "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^0.2.4",
