--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "@mui/styled-engine-sc": "^5.5.2",
     "@mui/x-data-grid": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^11.2.7",
@@ -16,9 +17,12 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
     "material-table": "^1.36.0",
+    "react": "^17.0.0",
     "react-admin": "^3.19.11",
+    "react-dom": "^17.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
