--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-admin": "^3.19.11",
     "react-dom": "^17.0.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4",
